# mdvim-monaco

./: .gitignore  FIX_SUMMARY.md  INSTALLER_BUILD.md  LICENSE  README.ja.md  README.md  TEST_CHECKLIST.md  TUTORIAL_EN.md  TUTORIAL_JA.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.bat
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/styles/: main.css
